# ReferAPI

./: .env.template  .flake8  .pre-commit-config.yaml  CC BY-NC-ND License  README.md  docker-compose.yaml  gunicorn_conf.py  mypy.ini  nginx.conf  pyproject.toml  start.sh
alembic/: env.py
alembic/versions/: 2024_10_30_1502-580736f42287_.py
src/: main.py
src/core/controllers/: auth.py  referral.py  registration.py
src/core/controllers/depends/: login.py  referrals.py  reg.py  token.py
src/core/controllers/depends/utils/: check_valid_ref.py  connect_db.py  hash_password.py  jsonresponse_new_jwt.py  jwt_token.py  redis_chash.py  return_error.py  token_from.py
src/core/orm/: crud.py  engine.py
src/core/orm/cruds/: auth.py  refer.py  user.py
src/core/orm/models/: auth.py  refer.py  user.py
src/core/settings/: constants.py  env.py
src/core/validators/: cache_dto.py  chach_dto.py  error.py  status_ok.py  token.py  user.py
